--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -299,7 +299,9 @@ class Solution:
 ```python
 class Solution:
     def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
-        # return list(set(nums1) & set(nums2))
+        # method1  
+        # return list(set(nums1) & set(nums2))  
+        
         nums1_set = set(nums1)
         res_set = set()
         for n in nums2:
@@ -405,15 +407,15 @@ print(Solution().intersection([1,2,2,1], [2,2]))
 ```python
 class Solution:
     def rotate(self, matrix: List[List[int]]) -> None:
-        """
-        1  2  3  4
-        5  6  7  8
-        9  10 11 12
-        13 14 15 16
+        """  
+        1  2  3  4  
+        5  6  7  8  
+        9  10 11 12  
+        13 14 15 16  
 
-        2 8 15 9
-        (0, 1) (1, 3) (3, 2) (2, 0)
-        """
+        2 8 15 9  
+        (0, 1) (1, 3) (3, 2) (2, 0)  
+        """  
         n = len(matrix)
         for i in range(n // 2):
             for j in range((n + 1) // 2):
@@ -424,12 +426,12 @@ class Solution:
                 matrix[j][n - i - 1] = tmp
 
     def rotate1(self, matrix: List[List[int]]) -> None:
-        """
-        Do not return anything, modify matrix in-place instead.
-        """
+        """  
+        Do not return anything, modify matrix in-place instead.  
+        """  
         
-        # 1 将矩阵进行上下翻转
-        # 2 将矩阵沿着轴对角线轴对称的元素交换
+        # 1 将矩阵进行上下翻转  
+        # 2 将矩阵沿着轴对角线轴对称的元素交换  
         n = len(matrix)
         for i in range(n // 2):
             matrix[i], matrix[n - i - 1] = matrix[n - i - 1], matrix[i]
@@ -478,7 +480,7 @@ class Solution:
 ```python
 class Solution:
     def spiralOrder(self, matrix: List[List[int]]) -> List[int]:
-      	# 用四个变量来控制边界，然后因为方向总是：→↓←↑ 左右下上循环往复
+      	# 用四个变量来控制边界，然后因为方向总是：→↓←↑ 左右下上循环往复  
         if not matrix:
             return []
         direction = 0
@@ -619,9 +621,9 @@ class Solution:
 ```python
 class Solution:
     def setZeroes(self, matrix: List[List[int]]) -> None:
-        """
-        Do not return anything, modify matrix in-place instead.
-        """
+        """  
+        Do not return anything, modify matrix in-place instead.  
+        """  
         m, n = len(matrix), len(matrix[0])
         row0, col0 = False, False
         for i in range(n):
@@ -763,12 +765,12 @@ class Solution:
 ```python
 class Solution:
     def productExceptSelf(self, nums: List[int]) -> List[int]:
-        '''
-        2,3,4,5,6
-        step1: 1,2,6,24,120
-        step2: 360,120,30,6,1
-        res:   360,240,180,144,120
-        '''
+        '''  
+        2,3,4,5,6  
+        step1: 1,2,6,24,120  
+        step2: 360,120,30,6,1  
+        res:   360,240,180,144,120  
+        '''  
         n = len(nums)
         left, right = [1] * n, [1] * n
         for i in range(1, n):
@@ -883,27 +885,19 @@ class Solution:
 
 ##### solution
 ```python
-# -*- coding: utf-8 -*-
-"""
-Created on Mon May 27 21:12:59 2019
-@author: 鱼红叶
-"""
 class Solution:
-    def maxArea(self, height):
-        """
-        :type height: List[int]
-        :rtype: int
-        """
-        max_ = 0
-        i, j = 0, len(height)-1
-        while i < j:
-            max_ = max(max_, (j-i) * min(height[i], height[j]))
-            if height[i] < height[j] :
-                i += 1
+    def maxArea(self, height: List[int]) -> int:
+        left, right = 0, len(height)-1
+        res = 0
+        while left < right:
+            cur_height = min(height[left], height[right])
+            cur_width = right - left
+            res = max(res, cur_height * cur_width)
+            if height[left] < height[right]:
+                left += 1
             else:
-                j -= 1
-        return max_
-print(Solution().maxArea([1,8,6,2,5,4,8,3,7]))
+                right -= 1
+        return res
 ```
 >
 #### 15.三数之和
@@ -1176,9 +1170,9 @@ class Solution:
 ```python
 class Solution:
     def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
-        """
-        Do not return anything, modify nums1 in-place instead.
-        """
+        """  
+        Do not return anything, modify nums1 in-place instead.  
+        """  
         i, j, k = m-1, n-1, m+n-1
         nums1[:] = nums1[:m] + nums2[:n]
         while i >= 0 and j >= 0:
@@ -1242,9 +1236,9 @@ class Solution:
 ```python
 class Solution:
     def moveZeroes(self, nums: List[int]) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
+        """  
+        Do not return anything, modify nums in-place instead.  
+        """  
         i, j = 0, 0
         while j < len(nums):
             if nums[j] != 0:
@@ -1369,9 +1363,9 @@ class Solution:
 ```python
 class Solution:
     def nextPermutation(self, nums: List[int]) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
+        """  
+        Do not return anything, modify nums in-place instead.  
+        """  
         n = len(nums)
 
         partition = -1
@@ -1432,8 +1426,10 @@ class Solution:
 **标签**
 `数组` `哈希表` 
 
+##### solution1 数和下标关联法
 
-##### solution
+-   假设下标`i`位置的数是`x`，为了把数`x`放到下标`x-1`的位置，交换下标`i`和下标`x-1`的值，如果下标i位置的数仍然满足条件`1 <= nums[i] <= n and nums[i] != nums[nums[i] - 1]`，则继续交换
+
 ```python
 class Solution:
     def firstMissingPositive(self, nums: List[int]) -> int:
@@ -1449,18 +1445,23 @@ class Solution:
             if i+1 != nums[i]:
                 return i+1
         return n+1
-      
-    def firstMissingPositive2(self, nums: List[int]) -> int:
-        '''
-        哈希 key:数字，value:该数字作为索引，对应位置数的正负，正表示有，负表示没有  
-        1.检查 1 是否存在于数组中。如果没有，则已经完成，1 即为答案。  
-        2.如果 nums = [1]，答案即为 2 。  
-        3.将负数，零，和大于 n 的数替换为 1 。
-        4.遍历数组。当读到数字 a 时，替换第 a 个元素的符号。注意重复元素：只能改变一次符号。由于没有下标`n`，使用下标 0 的元素保存是否存在数字 n。  
-        5.再次遍历数组。返回第一个正数元素的下标。  
-        6.如果 nums[0] > 0，则返回 n 。  
-        7.如果之前的步骤中没有发现 nums 中有正数元素，则返回n + 1。  
-        '''
+```
+
+##### solution2 添加负号法
+
+-   检查是否有第一个正整数1。
+    -   如果没有，1 即为答案。
+    -   如果有1
+        -   如果 nums = [1]，答案即为 2
+        -   如果数组长度大于1
+            -   将负数、0和大于`n`的数都替换为1
+            -   遍历数组。当读到数字 a 时，替换第 a 个元素的符号。注意重复元素：只能改变一次符号。由于没有下标`n`，使用下标 0 位置保存是否存在数字 n。  
+            -   从下标为1的位置遍历数组，返回第一个正数元素的下标。 
+            -   如果下标`1 ~ (n-1)`都为负数，那么检查`nums[0]`是否为正数，如果是则返回`n`，如果不是返回`n+1`
+
+```python
+class Solution:
+    def firstMissingPositive(self, nums: List[int]) -> int:
         n = len(nums)
         if 1 not in nums:
             return 1
@@ -1636,13 +1637,14 @@ class Solution:
 ```python
 class Solution:
     def rotate(self, nums: List[int], k: int) -> None:
-        """
-        Do not return anything, modify nums in-place instead.
-        """
-        # n = len(nums)
-        # k %= n
-        # nums[:] = nums[n-k:] + nums[:n-k]
-
+        """  
+        Do not return anything, modify nums in-place instead.  
+        """  
+        # method1  
+        # n = len(nums)  
+        # k %= n  
+        # nums[:] = nums[n-k:] + nums[:n-k]  
+  
         n = len(nums)
         k %= n
         nums[n-k:] = nums[n-k:][::-1]
@@ -1889,35 +1891,30 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=8 lang=python3
-#
-# [8] 字符串转换整数 (atoi)
-#
 class Solution:
     def myAtoi(self, s: str) -> int:
-        s = s.strip()
-        num = 0
-        if len(s) == 0:
+        s = s.lstrip()
+        if not s:
             return 0
-        Positive = True
-        if s[0] == '+' or s[0] == '-':
-            if s[0] == '-':
-                Positive = False
+        symbol = True
+        if s[0] in ["+", "-"]:
+            if s[0] == "-":
+                symbol = False
             s = s[1:]
-        for c in s:
-            if c >= '0' and c <= '9':
-                num = 10 * num + ord(c) - ord('0')
-            else:
-                break
-        if num > 2**31-1:
-            if Positive:
-                return 2**31-1
-            else:
-                return -2**31
-        if Positive:
-            return num
-        return -num
+        
+        i = 0
+        res = 0
+        while i < len(s) and s[i].isdigit():
+            res = 10 * res + int(s[i])
+            i += 1
+        
+        res = res if symbol else -res
+        if res > 2**31-1:
+            res = 2**31-1
+        if res < -2**31:
+            res = -2**31
+        
+        return res
 ```
 >
 #### 13.罗马数字转整数
