--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -2373,59 +2373,40 @@ class Solution:
 **标签**
 `哈希表` `字符串` `排序` 
 
+##### solution1 使用26个字母的组合作为哈希值
 
-##### solution
+-   可哈希的数据类型，即不可变的数据结构(数字类型（int，float，bool）字符串str、元组tuple、自定义类的对象)。
+-   不可哈希的数据类型，即可变的数据结构 (字典dict，列表list，集合set)
+-   详见https://blog.csdn.net/qq_27825451/article/details/102822506
+
 ```python
-#
-# @lc app=leetcode.cn id=49 lang=python3
-#
-# [49] 字母异位词分组
-#
 class Solution:
-    # 使用26个字母的列表作为哈希值
     def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
         from collections import defaultdict
         res = defaultdict(list)
         for s in strs:
-            count = [0] * 26
+            d = [0] * 26
             for c in s:
-                count[ord(c) - ord('a')] += 1
-            res[tuple(count)].append(s)
+                d[ord(c) - ord('a')] += 1
+            # 也可以使用 res[tuple(count)].append(s)
+            
+            res[",".join([str(a) for a in d])].append(s)
         return list(res.values())
-    # 使用字母排列的最小序作为每个字符串的哈希值
-    # def groupAnagrams2(self, strs):
-    #     """
-    #     :type strs: List[str]
-    #     :rtype: List[List[str]]
-    #     """
-    #     ddd = {} #"aet" : ["ate","eat","tea"] 键为最小序
-    #     for s in strs:
-    #         key = ''.join(sorted(list(s)))
-    #         if key in ddd:
-    #             ddd[key].append(s)
-    #         else:
-    #             ddd[key] = [s]
-    #     return ddd.values()
-    # 超时
-    # def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
-    #     l = len(strs)
-    #     d = [{} for _ in range(l)]
-    #     for i in range(l):
-    #         s = strs[i]
-    #         for c in s:
-    #             d[i][c] = d[i].get(c, 0) + 1
-    #     unique_d = []
-    #     for k in d:
-    #         if k in unique_d:
-    #             continue
-    #         else:
-    #             unique_d.append(k)
-    #     res = [[] for _ in range(len(unique_d))]
-    #     for i in range(l):
-    #         idx = unique_d.index(d[i])
-    #         res[idx].append(strs[i])
-    #     return res
 ```
+
+##### Solution2 使用字母排列的最小序作为每个字符串的哈希值
+
+```python
+class Solution:
+    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+        from collections import defaultdict
+        res = defaultdict(list)
+        for s in strs:
+            d = ''.join(sorted(s))
+            res[d].append(s)
+        return list(res.values())
+```
+
 >
 #### 76.最小覆盖子串
 [https://leetcode-cn.com/problems/minimum-window-substring](https://leetcode-cn.com/problems/minimum-window-substring) 
