--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -2459,40 +2459,29 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=76 lang=python3
-#
-# [76] 最小覆盖子串
-#
 class Solution:
     def minWindow(self, s: str, t: str) -> str:
-        if not s or not t:
-            return ""
+        from collections import Counter
+        t_dict = Counter(t)
+
+        left, right = 0, 0
         d = {}
-        for c in t:
+        need_keys = len(t_dict)
+        ans = (None, None, float("inf"))
+        while right < len(s):
+            c = s[right]
             d[c] = d.get(c, 0) + 1
-        # from collections import Counter
-        # d = Counter(t)
-        l, r = 0, 0
-        ans = float('inf'), None, None
-        required = len(d)
-        formed = 0
-        window = {}
-        while r < len(s):
-            c = s[r]
-            window[c] = window.get(c, 0) + 1
-            if c in d and d[c] == window[c]:
-                formed += 1
-            while l <= r and required == formed:
-                c = s[l]
-                if r-l+1 < ans[0]:
-                    ans = (r-l+1, l, r)
-                window[c] -= 1
-                if c in d and window[c] < d[c]:
-                    formed -= 1
-                l += 1
-            r += 1
-        return "" if ans[0] == float('inf') else s[ans[1]:ans[2]+1]
+            if c in t_dict and d[c] == t_dict[c]:
+                need_keys -= 1
+            while left <= right and need_keys == 0:
+                if ans[-1] > right - left + 1:
+                    ans = (left, right, right - left + 1)
+                d[s[left]] -= 1
+                if s[left] in t_dict and d[s[left]] < t_dict[s[left]]:
+                    need_keys += 1
+                left += 1            
+            right += 1
+        return s[ans[0]: ans[1]+1] if ans[2] != float("inf") else ""
 ```
 >
 #### 125.验证回文串
@@ -2534,18 +2523,13 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=125 lang=python3
-#
-# [125] 验证回文串
-#
 class Solution:
     def isPalindrome(self, s: str) -> bool:
-        if not s:
-            return True
-        import re
-        s = re.sub('[^0-9A-Za-z]', '' , s)
-        return s.lower() == s.lower()[::-1]
+        res = []
+        for c in s:
+            if c.isalnum():
+                res.append(c.lower())
+        return res == res[::-1]
 ```
 >
 #### 151.翻转字符串里的单词
@@ -2619,30 +2603,39 @@ class Solution:
 **标签**
 `双指针` `字符串` 
 
+##### solution1 使用库函数
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=151 lang=python3
-#
-# [151] 翻转字符串里的单词
-#
 class Solution:
     def reverseWords(self, s: str) -> str:
-        res, tmp = [], ''
+        s = s.strip()
+        res = []
+        for c in s.split(" "):
+            if not c:
+                continue
+            res.append(c)
+        return " ".join(res[::-1])
+```
+
+
+
+##### solution2 纯手动
+
+```python
+class Solution:
+    def reverseWords(self, s: str) -> str:
+        res =[]
+        cur = []
         for c in s.strip():
-            if c != ' ':
-                tmp += c
+            if c == " ":
+                if cur:
+                    res.append("".join(cur))
+                cur = []
             else:
-                if tmp.strip():
-                    res.append(tmp)
-                    tmp = ''
-        if tmp.strip():
-            res.append(tmp)
-        ans = ''
-        for i in res[::-1]:
-            ans += i + ' '
-        return ans[:-1]
+                cur.append(c)
+        if cur:
+            res.append("".join(cur))
+        return " ".join(res[::-1])
 ```
 >
 #### 242.有效的字母异位词
@@ -2682,28 +2675,23 @@ class Solution:
 **标签**
 `哈希表` `字符串` `排序` 
 
-
 ##### solution
+
+-   如果s和t长度不等，必然不是字母异位词
+-   如果长度相等，只需要判断s的每个字符都在t中，且频率相等。如果存在一个t中的字符不在s中，在其他字符都相同且频率相等的情况下，必然也存在一个s中的字符不在t中。因此只需要单向判断就可以了。
+
 ```python
-#
-# @lc app=leetcode.cn id=242 lang=python3
-#
-# [242] 有效的字母异位词
-#
 class Solution:
     def isAnagram(self, s: str, t: str) -> bool:
-        d = {}
-        for c in s:
-            d[c] = d.get(c, 0) + 1
-        for c in t:
-            if c not in d:
+        if len(s) != len(t):
+            return False
+        from collections import Counter
+        s_dict = Counter(s)
+        t_dict = Counter(t)
+        for c, cnt in s_dict.items():
+            if c not in t_dict or cnt != t_dict[c]:
                 return False
-            d[c] -= 1
-            if d[c] == 0:
-                d.pop(c)
-        if not d:
-            return True
-        return False
+        return True
 ```
 >
 #### 344.反转字符串
@@ -2742,21 +2730,14 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=344 lang=python3
-#
-# [344] 反转字符串
-#
 class Solution:
     def reverseString(self, s: List[str]) -> None:
         """
         Do not return anything, modify s in-place instead.
         """
         l = len(s)
-        if l == 0 or l == 1:
-            return
-        for i in range(l//2):
-            s[i], s[l-i-1] = s[l-i-1], s[i]
+        for i in range(l // 2):
+            s[i], s[l-1-i] = s[l-1-i], s[i]
 ```
 >
 #### 387.字符串中的第一个唯一字符
@@ -2802,16 +2783,10 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=387 lang=python3
-#
-# [387] 字符串中的第一个唯一字符
-#
 class Solution:
     def firstUniqChar(self, s: str) -> int:
-        d = {}
-        for c in s:
-            d[c] = d.get(c, 0) + 1
+        from collections import Counter
+        d = Counter(s)
         for i, c in enumerate(s):
             if d[c] == 1:
                 return i
@@ -2864,13 +2839,8 @@ class Solution:
 `数学` `字符串` `模拟` 
 
 
-##### solution
+##### solution1 将num1补0到和num2位数相同
 ```python
-#
-# @lc app=leetcode.cn id=415 lang=python3
-#
-# [415] 字符串相加
-#
 class Solution:
     def addStrings(self, num1: str, num2: str) -> str:
         res = ''
@@ -2880,18 +2850,68 @@ class Solution:
             num1 += '0' * (l-len(num1))
         else:
             num2 += '0' * (l-len(num2))
-#        print(num1, num2)
         c = 0
         for i in range(l):
             n = int(num1[i]) + int(num2[i]) + c
             res += str(n)[-1]
             c = n // 10
-#            print(res, c)
         if c != 0:
             res += str(c)
         return res[::-1]
 ```
->
+##### solution2 不补0，先计算num1+num2[:len(num1)]+carry，再计算carry+num2[len(num1):]
+
+```python
+class Solution:
+    def addStrings(self, num1: str, num2: str) -> str:
+        num1, num2 = num1[::-1], num2[::-1]
+        if len(num1) > len(num2):
+            num1, num2 = num2, num1
+        l1, l2 = len(num1), len(num2)
+        res = ""
+        carry = 0
+        for i in range(l1):
+            cur = int(num1[i]) + int(num2[i]) + carry
+            res += str(cur % 10)
+            carry = cur // 10
+        if l2 == l1:
+            res += str(carry)
+        else:
+            for i in range(l1, l2):
+                cur = int(num2[i]) + carry
+                res += str(cur % 10)
+                carry = cur // 10
+            res += str(carry)
+        while len(res) > 1 and res[-1] == "0":
+            res = res[:-1]
+        return res[::-1]
+```
+
+##### solution3 不补0，优雅写法
+
+```python
+class Solution:
+    def addStrings(self, num1: str, num2: str) -> str:
+        num1, num2 = num1[::-1], num2[::-1]
+        if len(num1) > len(num2):
+            num1, num2 = num2, num1
+        l1, l2 = len(num1), len(num2)
+        res = ""
+        carry = 0
+        i, j = 0, 0
+        while i < l1 or j < l2 or carry:
+            x = int(num1[i]) if i < l1 else 0
+            y = int(num2[j]) if j < l2 else 0
+            cur = x + y + carry
+            res += str(cur % 10)
+            carry = cur // 10
+            i += 1
+            j += 1
+        return res[::-1]
+```
+
+>   
+
 #### 438.找到字符串中所有字母异位词
 [https://leetcode-cn.com/problems/find-all-anagrams-in-a-string](https://leetcode-cn.com/problems/find-all-anagrams-in-a-string) 
 ##### 原题
@@ -2933,14 +2953,63 @@ class Solution:
 **标签**
 `哈希表` `字符串` `滑动窗口` 
 
+##### solution1 使用26个字母的计数列表，贼快
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=438 lang=python3
-#
-# [438] 找到字符串中所有字母异位词
-#
+class Solution:
+    def findAnagrams(self, s: str, p: str) -> List[int]:
+        p_dict = [0] * 26
+        for c in p:
+            p_dict[ord(c) - ord('a')] += 1
+
+        res = []
+        ls, lp = len(s), len(p)
+        d = [0] * 26
+        for c in s[:lp]:
+            d[ord(c) - ord('a')] += 1
+        if d == p_dict:
+            res.append(0)
+        
+        for i in range(1, ls - lp + 1):
+            d[ord(s[i-1]) - ord('a')] -= 1
+            d[ord(s[i+lp-1]) - ord('a')] += 1
+            if d == p_dict:
+                res.append(i)
+        return res
+```
+
+
+
+##### solution2 使用字典，有点慢
+
+```python
+class Solution:
+    def findAnagrams(self, s: str, p: str) -> List[int]:
+        from collections import Counter
+        p_dict = Counter(p)
+
+        res = []
+        ls, lp = len(s), len(p)
+        d = Counter(s[:lp])
+        if d == p_dict:
+            res.append(0)
+        for i in range(1, ls - lp + 1):
+            d[s[i-1]] -= 1
+            if d[s[i-1]] == 0:
+                del d[s[i-1]]
+            d[s[i+lp-1]] = d.get(s[i+lp-1], 0) + 1
+            if d == p_dict:
+                res.append(i)
+        return res
+```
+
+
+
+##### solution3 计算i~i+lp-1区间改为计算i-lp+1~i区间
+
+-   计算i~i+lp-1区间，在开头需要先计算出一个计数列表/字典出来，而计算i-lp+1~i区间不需要
+
+```python
 class Solution:
     def findAnagrams(self, s: str, p: str) -> List[int]:
         lp = len(p)
@@ -2958,13 +3027,6 @@ class Solution:
             if dict_window == dict_p:
                 res.append(i-lp+1)
         return res
-    # def findAnagrams(self, s: str, p: str) -> List[int]:
-    #     p = sorted(p)
-    #     res = []
-    #     for i in range(len(s) - len(p) + 1):
-    #         if sorted(s[i:i+len(p)]) == p:
-    #             res.append(i)
-    #     return res
 ```
 >
 #### 557.反转字符串中的单词-iii
@@ -3002,30 +3064,31 @@ class Solution:
 **标签**
 `双指针` `字符串` 
 
+##### solution1库函数
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=557 lang=python3
-#
-# [557] 反转字符串中的单词 III
-#
 class Solution:
     def reverseWords(self, s: str) -> str:
-        res, tmp = [], ''
-        for c in s.strip():
-            if c != ' ':
-                tmp += c
+        return " ".join([c[::-1] for c in s.split(" ")])
+```
+
+##### solution2 手动
+
+```python
+class Solution:
+    def reverseWords(self, s: str) -> str:
+        res = []
+        cur = ""
+        for c in s:
+            if c != " ":
+                cur += c
             else:
-                if tmp.strip():
-                    res.append(tmp[::-1])
-                    tmp = ''
-        if tmp.strip():
-            res.append(tmp[::-1])
-        ans = ''
-        for i in res:
-            ans += i + ' '
-        return ans[:-1]
+                if cur:
+                    res.append(cur[::-1])
+                    cur = ""
+        if cur:
+            res.append(cur[::-1])
+        return " ".join(res)
 ```
 >
 #### 567.字符串的排列
@@ -3063,51 +3126,30 @@ class Solution:
 **标签**
 `哈希表` `双指针` `字符串` `滑动窗口` 
 
-
 ##### solution
+
+-   和438同样的做法
+
 ```python
-#
-# @lc app=leetcode.cn id=567 lang=python3
-#
-# [567] 字符串的排列
-#
 class Solution:
     def checkInclusion(self, s1: str, s2: str) -> bool:
-        d = {}
+        s1_dict = [0] * 26
         for c in s1:
-            d[c] = d.get(c, 0) + 1
-        window = {}
-        n = len(s1)
-        for i, c in enumerate(s2):
-            window[c] = window.get(c, 0) + 1
-            if i >= n:
-                window[s2[i-n]] = window.get(s2[i-n], 0) - 1
-                if window[s2[i-n]] == 0:
-                    del window[s2[i-n]]
-            if window == d:
+            s1_dict[ord(c) - ord('a')] += 1
+        
+        l1, l2 = len(s1), len(s2)
+        window = [0] * 26
+        for c in s2[:l1]:
+            window[ord(c) - ord('a')] += 1
+        if window == s1_dict:
+            return True
+        
+        for i in range(1, l2-l1+1):
+            window[ord(s2[i-1]) - ord('a')] -= 1
+            window[ord(s2[i+l1-1]) - ord('a')] += 1
+            if window == s1_dict:
                 return True
         return False
-    # 超时解法
-    # def checkInclusion(self, s1: str, s2: str) -> bool:
-    #     l1, l2 = len(s1), len(s2)
-    #     if l1 > l2:
-    #         return False
-    #     s1 = sorted(s1)
-    #     for i in range(l2-l1+1):
-    #         if s1 == sorted(s2[i:i+l1]):
-    #             return True
-    #     return False
-    # 这对应子序列包含问题的解
-    # def checkInclusion(self, s1: str, s2: str) -> bool:
-    #     d = {}
-    #     for c in s1:
-    #         d[c] = d.get(c, 0) + 1
-    #     for c in s2:
-    #         if c in d:
-    #             d[c] -= 1
-    #             if d[c] == 0:
-    #                 d.pop(c)
-    #     return True if not d else False
 ```
 >
 #### 657.机器人能否返回原点
@@ -3151,14 +3193,9 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=657 lang=python3
-#
-# [657] 机器人能否返回原点
-#
 class Solution:
     def judgeCircle(self, moves: str) -> bool:
-        return moves.count('U')==moves.count('D') and moves.count('R')==moves.count('L')
+        return moves.count("L") == moves.count("R") and moves.count("U") == moves.count("D")
 ```
 >
 ## 3链表
