--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -3246,37 +3246,46 @@ class Solution:
 **标签**
 `递归` `链表` `数学` 
 
+##### solution1 迭代
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=2 lang=python
-#
-# [2] 两数相加
-#
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    def addTwoNumbers(self, l1, l2):
-        """
-        :type l1: ListNode
-        :type l2: ListNode
-        :rtype: ListNode
-        """
+class Solution:
+    def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:
+        dummy = ListNode(-1)
+        res = dummy
+        carry = None
+        while l1 or l2 or carry:
+            val1 = l1.val if l1 else 0
+            val2 = l2.val if l2 else 0
+            cval = carry.val if carry else 0
+            cur_val = val1 + val2 + cval
+            carry = None if cur_val < 10 else ListNode(1)
+            res.next = ListNode(cur_val % 10)
+            res = res.next
+            l1 = l1.next if l1 else None
+            l2 = l2.next if l2 else None
+        return dummy.next
+```
+
+
+
+
+##### solution2 递归
+```python
+class Solution:
+    def addTwoNumbers(self, l1: ListNode, l2: ListNode) -> ListNode:
         if not l1:
             return l2
         if not l2:
             return l1
-        if l1.val + l2.val < 10:
-            l3 = ListNode(l1.val+l2.val)
+        cur_val = l1.val + l2.val
+        if cur_val < 10:
+            l3 = ListNode(cur_val)
             l3.next = self.addTwoNumbers(l1.next, l2.next)
         else:
-            tmp = ListNode(1)
-            l3 = ListNode(l1.val+l2.val-10)
-            l3.next = self.addTwoNumbers(self.addTwoNumbers(l1.next, tmp), l2.next)
+            l3 = ListNode(cur_val - 10)
+            carry = ListNode(1)
+            l3.next = self.addTwoNumbers(self.addTwoNumbers(l1.next, carry), l2.next)
         return l3
 ```
 >
@@ -3326,44 +3335,28 @@ class Solution(object):
 **标签**
 `链表` `双指针` 
 
-
 ##### solution
+
+- 删除倒数第n个节点，需要找到倒数第n+1个节点p，然后通过 `p.next = p.next.next`就可以删掉倒数第n个节点 `p.next`了。
+- 寻找倒数第n+1个节点p的方法——快慢指针，以 `1->2->3->4->5`，n=2为例
+    - 第一步，定义一个dummy节点指向head，即 `0->1->2->3->4->5`
+    - 第二步，找到正数第n个节点，从0出发，向右跑n步，定义为fast节点，即2
+    - 第三步，slow节点从0出发，fast节点从第n个节点(即2)出发，一起向右跑。fast节点右边还有length-n(5-2=3)个节点，那么当fast节点跑到最后一个节点5时，slow节点从0往右跑了length-n步，正数length-n个节点就是倒数第n+1个节点
+    - 注意dummy节点不计入正数和倒数的索引中
+
 ```python
-#
-# @lc app=leetcode.cn id=19 lang=python
-#
-# [19] 删除链表的倒数第N个节点
-#
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    def removeNthFromEnd(self, head, n):
-        """
-        :type head: ListNode
-        :type n: int
-        :rtype: ListNode
-        """
-        if not head:
-            return head
-        # 正向行进n-1步到达正数第n个节点
-        p = head
-        for _ in range(n-1):
-            p = p.next
-        # 如果此时p.next为空，说明链表长度为n，那么倒数第n个节点为head
-        if not p.next:
-            return head.next
-        #
-        p1 = head
-        # while循环至少跑一步，因为此时p.next不为空。因此pre_p1不会未定义
-        while p.next:
-            p = p.next
-            pre_p1 = p1
-            p1 = p1.next
-        pre_p1.next = p1.next
-        return head
+class Solution:
+    def removeNthFromEnd(self, head: ListNode, n: int) -> ListNode:
+        dummy = ListNode(0, head)
+        fast = dummy
+        for _ in range(n):
+            fast = fast.next
+        slow = dummy
+        while fast.next:
+            fast = fast.next
+            slow = slow.next
+        slow.next = slow.next.next
+        return dummy.next
 ```
 >
 #### 21.合并两个有序链表
@@ -3407,31 +3400,45 @@ class Solution(object):
 **标签**
 `递归` `链表` 
 
+##### solution1 迭代
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=21 lang=python3
-#
-# [21] 合并两个有序链表
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
+class Solution:
+    def mergeTwoLists2(self, l1: ListNode, l2: ListNode) -> ListNode:
+        dummy = ListNode(-1)
+        res = dummy
+        while l1 and l2:
+            if l1.val < l2.val:
+                res.next = l1
+                l1 = l1.next
+            else:
+                res.next = l2
+                l2 = l2.next
+            res = res.next
+        if l1:
+            res.next = l1
+        if l2:
+            res.next = l2
+        return dummy.next
+```
+
+
+
+
+##### solution2 递归
+```python
 class Solution:
     def mergeTwoLists(self, l1: ListNode, l2: ListNode) -> ListNode:
         if not l1:
             return l2
         if not l2:
             return l1
-        if l1.val > l2.val:
-            l3 = ListNode(l2.val)
-            l3.next = self.mergeTwoLists(l1, l2.next)
-        else:
+        if l1.val < l2.val:
             l3 = ListNode(l1.val)
             l3.next = self.mergeTwoLists(l1.next, l2)
+        else:
+            l3 = ListNode(l2.val)
+            l3.next = self.mergeTwoLists(l1, l2.next)
         return l3
 ```
 >
@@ -3490,64 +3497,42 @@ class Solution:
 **标签**
 `递归` `链表` 
 
-
 ##### solution
+
+- 设置dummy节点
+- 关键在于反转前先确认好 上一段的end和本段的start链接，本段的end和下一段的start链接
+
+![avatar](https://tva1.sinaimg.cn/large/e6c9d24egy1h0bmz0bcxvj20u01e8wh9.jpg)
+
 ```python
-#
-# @lc app=leetcode.cn id=25 lang=python3
-#
-# [25] K 个一组翻转链表
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def reverseKGroup(self, head: ListNode, k: int) -> ListNode:
+        if not head or not k:
+            return head
+        length = 0
         p = head
-        c = 0
         while p:
             p = p.next
-            c += 1
-        n = c // k
-        if n == 0 or k == 1:
-            return head
+            length += 1
+        loops = length // k
         dummy = ListNode(-1)
         dummy.next = head
-        pbefore = dummy
         pre, p = None, head
-        tail = head
-        for i in range(n):
-            # 反转(i-1)*k+1 ~ i*k之间的链表
-            for _ in range(k-1):
+        last_end, cur_end = dummy, head
+        for _ in range(loops):
+            pre = None
+            for _ in range(k):
                 tmp = p.next
                 p.next = pre
                 pre = p
                 p = tmp
-            tail.next = p.next
-            pbefore.next = p
-            p.next = pre
-            pbefore = tail
-            pre, p = None, tail.next
-            tail = tail.next
+            # after reverse cur part, pre is cur_start, p is next_end
+            # last_end.next = cur_start
+            last_end.next = pre
+            # cur_end.next = next_end
+            cur_end.next = p
+            last_end, cur_end = cur_end, p
         return dummy.next
-# def create(items):
-#     head = ListNode(items[0])
-#     p = head
-#     for i in items[1:]:
-#         p.next = ListNode(i)
-#         p = p.next
-#     return head
-# def print_nodes(head):
-#     while head:
-#         print(head.val, end=' ')
-#         head = head.next
-#     print()
-# head = create([1,2,3,4,5])
-# print_nodes(head)
-# head = Solution().reverseKGroup(head, 1)
-# print_nodes(head)
 ```
 >
 #### 61.旋转链表
@@ -3558,7 +3543,8 @@ class Solution:
  
 
  **示例 1：** 
-<img alt="" src="https://assets.leetcode.com/uploads/2020/11/13/rotate1.jpg" style="width: 600px; height: 254px;" />
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0bn244c8oj20js08et95.jpg" style="width: 600px; height: 254px;" />
+
 ```
 
 输入：head = [1,2,3,4,5], k = 2
@@ -3566,7 +3552,8 @@ class Solution:
 
 ```
  **示例 2：** 
-<img alt="" src="https://assets.leetcode.com/uploads/2020/11/13/roate2.jpg" style="width: 472px; height: 542px;" />
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0bn26wk8aj20d40f20t9.jpg" style="width: 472px; height: 542px;" />
+
 ```
 
 输入：head = [0,1,2], k = 4
@@ -3586,43 +3573,24 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=61 lang=python
-#
-# [61] 旋转链表
-#
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    def rotateRight(self, head, k):
-        """
-        :type head: ListNode
-        :type k: int
-        :rtype: ListNode
-        """
-        if not head:
+class Solution:
+    def rotateRight(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:
+        if not head or k == 0:
             return head
-        c = 0
+        
+        cnt = 1
         p = head
-        while p:
+        while p.next:
             p = p.next
-            c += 1
-        p = head
-        k = k % c
-        if k == 0:
-            return head
-        for _ in range(c-k-1):
+            cnt += 1
+        p.next = head
+
+        move = cnt - k % cnt
+        for _ in range(move):
             p = p.next
-        res = p.next
+        new_head = p.next
         p.next = None
-        p1 = res
-        while p1.next:
-            p1 = p1.next
-        p1.next = head
-        return res
+        return new_head
 ```
 >
 #### 82.删除排序链表中的重复元素-ii
@@ -3633,7 +3601,8 @@ class Solution(object):
  
 
  **示例 1：** 
-<img alt="" src="https://assets.leetcode.com/uploads/2021/01/04/linkedlist1.jpg" style="height: 142px; width: 500px;" />
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0bn84utswj20lq06674g.jpg" style="height: 142px; width: 500px;" />
+
 ```
 
 输入：head = [1,2,3,3,4,4,5]
@@ -3641,7 +3610,8 @@ class Solution(object):
 
 ```
  **示例 2：** 
-<img alt="" src="https://assets.leetcode.com/uploads/2021/01/04/linkedlist2.jpg" style="height: 164px; width: 400px;" />
+<img alt="" src="https://tva1.sinaimg.cn/large/e6c9d24egy1h0bn87495qj20f2066jrf.jpg" style="height: 164px; width: 400px;" />
+
 ```
 
 输入：head = [1,1,1,2,3]
@@ -3661,33 +3631,22 @@ class Solution(object):
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=82 lang=python3
-#
-# [82] 删除排序链表中的重复元素 II
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def deleteDuplicates(self, head: ListNode) -> ListNode:
-        if not head:
+        if not head or not head.next:
             return head
         dummy = ListNode(-1)
         dummy.next = head
-        pre, p = dummy, head
-        while p:
-            duplicate = False
-            while p.next and p.val == p.next.val:
-                p = p.next
-                duplicate = True
-            if duplicate:
-                pre.next = p.next
+        pre, cur = dummy, head
+        while (cur and cur.next):
+            if(cur.val == cur.next.val):
+                while(cur and cur.next and cur.val == cur.next.val):
+                    cur = cur.next
+                pre.next = cur.next
             else:
-                pre = p
-            p = p.next
+                pre.next = cur
+                pre = pre.next
+            cur = cur.next
         return dummy.next
 ```
 >
@@ -3727,28 +3686,15 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=83 lang=python3
-#
-# [83] 删除排序链表中的重复元素
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def deleteDuplicates(self, head: ListNode) -> ListNode:
         if not head:
-            return head
-        pre, p = ListNode(None), head
-        while p:
-            if pre.val != p.val:
-                pre = p
-                p = p.next
-            else:
-                p = p.next
-                pre.next = p
+            return None
+        node = head
+        while node:
+            while node.next and node.val == node.next.val:
+                node.next = node.next.next
+            node = node.next
         return head
 ```
 >
@@ -3792,57 +3738,25 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=92 lang=python3
-#
-# [92] 反转链表 II
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def reverseBetween(self, head: ListNode, m: int, n: int) -> ListNode:
-        """
-        1->2->3->4->5->NULL
-        dummy->1->2->3->4->5->NULL
-        m=2,n=4
-        dummy->1-> 2<-3-<4 ->5->NULL
-        pbefore:dummy
-        m-1(1)个循环之后
-        pbefore:1
-        tail:pbefore.next(2)
-        pre, p = None, 2
-        n-m(2)个循环之后
-        2->None, pre, p = 2, 3
-        3->2,    pre, p = 3, 4
-        2.next = 5
-        1.next = 4
-        4.next = 3
-        dummy->1->4->3->2->5->NULL
-        return dummy.next
-        """
-        if m == n:
+        if not head or not head.next or m == n:
             return head
         dummy = ListNode(-1)
         dummy.next = head
-        pbefore = dummy
+        pre, p = dummy, head
         for _ in range(m-1):
-            pbefore = pbefore.next
-        pre, p = None, pbefore.next
-        # tail为反转开始的节点，经过反转变为尾节点
-        tail = pbefore.next
-        for _ in range(n-m):
+            pre = p
+            p = p.next
+        start, end = pre, p
+        pre = None
+        for _ in range(n-m+1):
             tmp = p.next
             p.next = pre
             pre = p
             p = tmp
-        tail.next = p.next
-        pbefore.next = p
-        p.next = pre
-        # 如果m=1，那么dummy.next将不再是head
-        # 此时，dummy和pbefore指向相同，在第34行dummy.next改变了
+        start.next = pre
+        end.next = p
         return dummy.next
 ```
 >
@@ -3907,27 +3821,17 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=138 lang=python
-#
-# [138] 复制带随机指针的链表
-#
-"""
-# Definition for a Node.
-class Node(object):
-    def __init__(self, val, next, random):
-        self.val = val
+class Node:
+    def __init__(self, x: int, next: 'Node' = None, random: 'Node' = None):
+        self.val = int(x)
         self.next = next
         self.random = random
-"""
-class Solution(object):
-    def copyRandomList(self, head):
-        """
-        :type head: Node
-        :rtype: Node
-        """
+
+class Solution:
+    def copyRandomList(self, head: 'Node') -> 'Node':
         if not head:
-            return head
+            return None
+
         p = head
         while p:
             tmp = Node(p.val, p.next, None)
@@ -3935,17 +3839,17 @@ class Solution(object):
             p = tmp.next
         p = head
         while p:
-            p.next.random = p.random.next if p.random else None
+            if p.random:
+                p.next.random = p.random.next
             p = p.next.next
-        p = head
-        p1 = p.next
-        res = p1
-        while p:
-            p.next = p1.next
-            p = p.next
-            p1.next = p.next if p else None
+        head2 = head.next
+        p1, p2 = head, head2
+        while p2 and p2.next:
+            p1.next = p2.next
             p1 = p1.next
-        return res
+            p2.next = p1.next
+            p2 = p2.next
+        return head2
 ```
 >
 #### 141.环形链表
@@ -4009,22 +3913,15 @@ class Solution(object):
 
 ##### solution
 ```python
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    def hasCycle(self, head):
-        """
-        :type head: ListNode
-        :rtype: bool
-        """
-        pFast, pSlow = head, head
-        while pFast and pFast.next:
-            pFast = pFast.next.next
-            pSlow = pSlow.next
-            if pSlow == pFast:
+class Solution:
+    def hasCycle(self, head: ListNode) -> bool:
+        if not head:
+            return None
+        slow, fast = head, head
+        while fast and fast.next:
+            slow = slow.next
+            fast = fast.next.next
+            if slow == fast:
                 return True
         return False
 ```
@@ -4089,80 +3986,11 @@ class Solution(object):
 
 ##### solution
 ```python
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-'''
-三种解法
-set 使用额外空间较大
-来自剑指offer 步骤较多
-Floyd 需要证明
-'''
-# class Solution(object):
-#     def detectCycle(self, head):
-#         """
-#         :type head: ListNode
-#         :rtype: ListNode
-#         """
-#         visited = set()
-#         p = head
-#         while p:
-#             if p in visited:
-#                 return p
-#             else:
-#                 visited.add(p)
-#                 p = p.next
-#         return None
-# class Solution(object):
-#     def detectCycle(self, head):
-#         """
-#         :type head: ListNode
-#         :rtype: ListNode
-#         """
-#         if not head:
-#             return None
-#         def hasCycle(head):
-#             slow, fast = head, head
-#             while fast and fast.next:
-#                 slow = slow.next
-#                 fast = fast.next.next
-#                 if slow == fast:
-#                     return slow
-#             return None
-#         meetingNode = hasCycle(head)
-#         if not meetingNode:
-#             return None
-#         p = meetingNode.next
-#         c = 1
-#         while p != meetingNode:
-#             p = p.next
-#             c += 1
-#         p1, p2 = head, head
-#         for _ in range(c):
-#             p1 = p1.next
-#         while p1 != p2:
-#             p1 = p1.next
-#             p2 = p2.next
-#         return p1
-# Floyd算法
-# https://leetcode-cn.com/problems/linked-list-cycle-ii/solution/huan-xing-lian-biao-ii-by-leetcode/
-# head到环入口节点距离L，入口节点到meetingNode距离a，meetingNode节点到入口节点距离b
-# p1, p2 = head, meetingNode
-# 最终相遇在环入口节点时，各自走的距离为
-# L+k1*(a+b), k2(a+b)+b
-# 相遇时距离head 的距离分别为
-# L+k1*(a+b), L+a + k2*(a+b)+b = L+(k2+1)*(a+b)
-# 都是在环的入口节点上(即 L + 整数倍 * (a+b))
-# 注意各自走的距离L+k1*(a+b) = k2(a+b)+b
-# meetingNode: 快慢指针 2 * (L+a) = L + n * (a+b) + a => L = (n-1)*(a+b) + b
-# 因此只要满足k2-k1 = n-1即可
-class Solution(object):
-    def detectCycle(self, head):
+class Solution:
+    def detectCycle(self, head: ListNode) -> ListNode:
         if not head:
             return None
-        def hasCycle(head):
+        def getMeetingNode(head):
             slow, fast = head, head
             while fast and fast.next:
                 slow = slow.next
@@ -4170,10 +3998,10 @@ class Solution(object):
                 if slow == fast:
                     return slow
             return None
-        meetingNode = hasCycle(head)
+        meetingNode = getMeetingNode(head)
         if not meetingNode:
             return None
-        p1, p2 = head, meetingNode
+        p1, p2 = meetingNode, head
         while p1 != p2:
             p1 = p1.next
             p2 = p2.next
@@ -4230,60 +4058,39 @@ L0 → Ln → L1 → Ln - 1 → L2 → Ln - 2 → …
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=143 lang=python3
-#
-# [143] 重排链表
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-# def printListNode(head):
-#     while head:
-#         print(head.val, end=' ')
-#         head = head.next
-#     print()
 class Solution:
     def reorderList(self, head: ListNode) -> None:
         """
         Do not return anything, modify head in-place instead.
         """
-        if not head:
-            return
-        # 1 2 3 4 5
-        p1, p2 = head, head.next
-        while p2 and p2.next:
-            p1 = p1.next
-            p2 = p2.next.next
-        # p1: 3, p: 4
-        pre, p = None, p1.next
-        # 4 5 -> 5 4
-        p1.next = None
+        p = head
+        cnt = 0
+        while p:
+            p = p.next
+            cnt += 1
+        
+        pre, p = None, head
+        for i in range((cnt+1) // 2):
+            pre = p;
+            p = p.next
+        pre.next = None
+        right_head = p
+
+        pre, p = None, right_head
         while p:
             tmp = p.next
             p.next = pre
             pre = p
             p = tmp
-        # p: None, p1: 5
-        while head and pre:
-            tmp = pre.next
-            pre.next = head.next
-            head.next = pre
-            head = pre.next
-            pre = tmp
-# head = ListNode(1)
-# a = ListNode(2)
-# b = ListNode(3)
-# c = ListNode(4)
-# d = ListNode(5)
-# head.next = a
-# a.next = b
-# b.next = c
-# c.next = d
-# Solution().reorderList(head)
-# printListNode(head)
+        right_reverse_head = pre
+
+        left, right = head, right_reverse_head
+        while right:
+            tmp1, tmp2 = left.next, right.next
+            left.next = right
+            right.next = tmp1
+            left = tmp1
+            right = 
 ```
 >
 #### 160.相交链表
@@ -4372,54 +4179,15 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=160 lang=python
-#
-# [160] 相交链表
-#
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    # https://leetcode-cn.com/problems/intersection-of-two-linked-lists/solution/tu-jie-xiang-jiao-lian-biao-by-user7208t/
-    #     a1->a2->c1->c2->c3
-    # b1->b2->b3->c1->c2->c3
-    # x+c+y = y+c+x, x指a1->a2的距离，x指重合部分的距离，y指b1->b2->b3的距离
-    def getIntersectionNode(self, headA, headB):
-        """
-        :type head1, head1: ListNode
-        :rtype: ListNode
-        """
+class Solution:
+    def getIntersectionNode(self, headA: ListNode, headB: ListNode) -> ListNode:
+        if not headA or not headB:
+            return None
         p1, p2 = headA, headB
         while p1 != p2:
             p1 = p1.next if p1 else headB
             p2 = p2.next if p2 else headA
         return p1
-    def getIntersectionNode2(self, headA, headB):
-        """
-        :type head1, head1: ListNode
-        :rtype: ListNode
-        """
-        p1, p2 = headA, headB
-        c1, c2 = 0, 0
-        while p1:
-            p1 = p1.next
-            c1 += 1
-        while p2:
-            p2 = p2.next
-            c2 += 1
-        if c1 > c2:
-            for _ in range(c1-c2):
-                headA = headA.next
-        else:
-            for _ in range(c2-c1):
-                headB = headB.next
-        while headA != headB:
-            headA = headA.next
-            headB = headB.next
-        return headA
 ```
 >
 #### 206.反转链表
@@ -4467,20 +4235,8 @@ class Solution(object):
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=206 lang=python3
-#
-# [206] 反转链表
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def reverseList(self, head: ListNode) -> ListNode:
-        if not head:
-            return head
         pre, p = None, head
         while p:
             tmp = p.next
@@ -4488,17 +4244,6 @@ class Solution:
             pre = p
             p = tmp
         return pre
-    # def reverseList(self, head: ListNode) -> ListNode:
-    #     if not head:
-    #         return head
-    #     pre, p = head, head.next
-    #     pre.next = None
-    #     while p:
-    #         tmp = p.next
-    #         p.next = pre
-    #         pre = p
-    #         p = tmp
-    #     return pre
 ```
 >
 #### 234.回文链表
@@ -4540,44 +4285,35 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=234 lang=python3
-#
-# [234] 回文链表
-#
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 class Solution:
     def isPalindrome(self, head: ListNode) -> bool:
-        # e.g. 1->2->3->4->5->NULL
         if not head:
-            return True
-        p1, p2 = head, head.next
-        while p2 and p2.next:
-            p1 = p1.next
-            p2 = p2.next.next
-        # p1 = 3
-        # 反转p1->……->NULL,3->4->5->NULL
-        p = p1.next
-        p1.next = None
-        while p:
-            tmp = p.next
-            p.next = p1
-            p1 = p
-            p = tmp
-        # 5->4->3
-        while p1 and head:
-            if p1.val != head.val:
+            return False
+        slow, fast = head, head
+        while fast and fast.next:
+            slow = slow.next
+            fast = fast.next.next
+        # slow表示中点
+        
+        # 1->2->3->4,slow对应3；1->2->3->4->5,slow对应3
+        
+        # 反转右边部分
+        
+        pre, cur = None, slow
+        while cur:
+            next = cur.next
+            cur.next = pre
+            pre = cur
+            cur = next
+        # 现在pre是右边链表经过反转的头节点
+        
+        while head and pre:
+            if head.val != pre.val:
                 return False
-            p1 = p1.next
             head = head.next
+            pre = pre.next
         return True
-# a = ListNode(1)
-# a.next = ListNode(2)
-# print(Solution().isPalindrome(a))
+
 ```
 >
 #### 328.奇偶链表
@@ -4624,26 +4360,15 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=328 lang=python
-#
-# [328] 奇偶链表
-#
-# Definition for singly-linked list.
-# class ListNode(object):
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
-class Solution(object):
-    def oddEvenList(self, head):
-        """
-        :type head: ListNode
-        :rtype: ListNode
-        """
+class Solution:
+    def oddEvenList(self, head: ListNode) -> ListNode:
         if not head or not head.next:
             return head
-        odd, even = head, head.next
-        even_head = even
+        odd, even, even_head = head, head.next, head.next
+        # 1->2->3->4->5时，even为空停止，此时形成了1->3->5->NULL和2->4->NULL
+        
+        # 1->2->3->4时，even不为空，even.next为空停止，此时形成了1->3->NULL和2->4->NULL
+        
         while even and even.next:
             odd.next = even.next
             odd = odd.next
