--- a/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
+++ b/_posts/2022-02-27-leetcode_分组刷题_数据结构.md
@@ -4424,45 +4424,32 @@ class Solution:
 **标签**
 `队列` `数组` `滑动窗口` `单调队列` `堆（优先队列）` 
 
-
 ##### solution
+
+-   使用双端单调队列`q`存放最大值，`q`中的元素是严格单调递减的
+-   考虑当前窗口的两个元素`i`和`j`，如果`i < j`，并且`nums[i] <= nums[j]`，那么不需要再保留`nums[i]`
+-   注意需要保证`q`的首元素在当前窗口内
+
 ```python
-#
-# @lc app=leetcode.cn id=239 lang=python3
-#
-# [239] 滑动窗口最大值
-#
 class Solution:
-    def maxSlidingWindow(self, nums, k):
-        res = []
-        if not nums:
-            return res
-        if len(nums) >= k:
-            deque = []  # 存放元素的索引
-            for i in range(k):
-                while deque and nums[deque[-1]] < nums[i]:
-                    deque.pop()
-                deque.append(i)
-            # print(deque)
-            for i in range(k, len(nums)):
-                res.append(nums[deque[0]])
-                while deque and nums[deque[-1]] < nums[i]:
-                    deque.pop()
-                while deque and deque[0] <= i-k:
-                    deque.pop(0)
-                deque.append(i)
-                # print(deque)
-            res.append(nums[deque[0]])
+    def maxSlidingWindow(self, nums: List[int], k: int) -> List[int]:
+        from collections import deque
+        q = deque()
+        for i in range(k):
+            while q and nums[i] >= nums[q[-1]]:
+                q.pop()
+            q.append(i)
+        res = [nums[q[0]]]
+        
+        n = len(nums)
+        for i in range(k, n):
+            while q and nums[i] >= nums[q[-1]]:
+                q.pop()
+            q.append(i)
+            while q and q[0] <= i-k:
+                q.popleft()
+            res.append(nums[q[0]])
         return res
-    # 18.77 %
-    # def maxSlidingWindow(self, nums: List[int], k: int) -> List[int]:
-    #     res = []
-    #     if  not nums:
-    #         return res
-    #     for i in range(len(nums)-k+1):
-    #         res.append(max(nums[i:i+k]))
-    #     return res
-# print(Solution().maxSlidingWindow([1,3,1,2,0,5], 3))
 ```
 >
 #### 622.design-circular-queue
@@ -4772,33 +4759,19 @@ class MyCircularDeque:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=20 lang=python
-#
-# [20] 有效的括号
-#
-class Solution(object):
-    def isValid(self, s):
-        """
-        :type s: str
-        :rtype: bool
-        """
-        left = ['(', '[', '{']
-        right = [')', ']', '}']
+class Solution:
+    def isValid(self, s: str) -> bool:
+        d = {"(": ")", "[": "]", "{": "}"}
         stack = []
         for c in s:
-            if c in left:
+            if c in "([{":
                 stack.append(c)
             else:
-                idx = right.index(c)
-                if not stack:
+                if stack and c == d[stack[-1]]:
+                    stack.pop()
+                else:
                     return False
-                popItem = stack.pop()
-                if popItem != left[idx]:
-                    return False
-        if not stack:
-            return True
-        return False
+        return not stack
 ```
 >
 #### 71.简化路径
